Added task counter

--- a/style.css
+++ b/style.css
@@ -63,3 +63,13 @@ h4 {
   border-radius: 20px 20px 0px 0px;
   border-top: 2px solid black;
 }
+#taskCount{
+  width: auto;
+  display: inline-block;
+  margin-left: 150px;
+  margin-top:2px;
+}
+.sidebar p{
+  margin: 3px;
+}
+
