--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  height: 90px;
+  height: 100vh;
   width: 100vw;
   background-color: rgb(143, 144, 144);
   overflow-y: auto;
@@ -94,8 +94,21 @@ h4 {
   display: flex;
   justify-content: center;
   align-items: center;
+  /* To bring calender below */
+  flex-direction: column;
+  /* to give width so that the calender heading can get styled */
+  width: 70%;
 }
 
-#CH{
-  text-align: center;
+.calender-area h4{
+  /* text-align: center; */
+}
+
+.calender{
+  justify-content: space-between;
+  padding: 10px;
+  border-radius: 10px;
+  background-color: rgb(202, 202, 202);
+  margin: 20px;
+  width: 50%;
 }
